# codegraph-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.codex/: config.toml.example
.github/workflows/: ci.yml  release.yml
benchmarks/graph_truth/schemas/: graph_truth_case.schema.json
codegraph-ui/: README.md
codegraph-ui/static/: app.js  index.html  styles.css
crates/codegraph-bench/: Cargo.toml  README.md
crates/codegraph-bench/competitors/codegraphcontext/: sitecustomize.py
crates/codegraph-bench/src/: graph_truth.rs  lib.rs  retrieval_ablation.rs  two_layer.rs
crates/codegraph-bench/src/competitors/: codegraphcontext.rs  mod.rs
crates/codegraph-cli/: Cargo.toml  README.md
crates/codegraph-cli/src/: audit.rs  lib.rs  main.rs
crates/codegraph-cli/tests/: cli_smoke.rs
crates/codegraph-core/: Cargo.toml  README.md
crates/codegraph-core/src/: ids.rs  kinds.rs  lib.rs  model.rs  validation.rs
crates/codegraph-index/: Cargo.toml
crates/codegraph-index/src/: lib.rs  scope.rs
crates/codegraph-mcp-server/: Cargo.toml  README.md
crates/codegraph-mcp-server/src/: lib.rs
crates/codegraph-parser/: Cargo.toml  README.md
crates/codegraph-parser/fixtures/: auth.spec.ts  basic.js  basic.ts  class_with_methods.ts  component.tsx  core_relations.ts  events_async.ts  imports_exports.ts  migration.ts  nested_functions.ts  route_auth_security.ts  simple_function.ts
crates/codegraph-parser/src/: lib.rs
crates/codegraph-parser/tools/: typescript-resolver.mjs
crates/codegraph-query/: Cargo.toml  README.md
crates/codegraph-query/src/: lib.rs
crates/codegraph-store/: Cargo.toml  README.md
crates/codegraph-store/src/: error.rs  lib.rs  sqlite.rs  traits.rs
crates/codegraph-trace/: Cargo.toml
crates/codegraph-trace/src/: lib.rs
crates/codegraph-vector/: Cargo.toml  README.md
crates/codegraph-vector/src/: lib.rs
docs/: architecture.md  benchmark-guide.md  cli-reference.md  codegraphcontext-comparison.md  guardrails.md  install.md  language-frontends.md  mcp-reference.md  operational-profiles.md  quality-gates.md  quickstart.md  troubleshooting.md
fixtures/smoke/basic_repo/: README.md
install/: install.ps1  install.sh
packaging/homebrew/: codegraph-mcp.rb
reports/audit/: 01_benchmark_validity.md  02_graph_schema_edge_taxonomy.md  02_graph_truth_manifest_schema.md  03_adversarial_fixtures.md  03_storage_forensics.md  04_graph_truth_gate_initial_run.json  04_graph_truth_gate_initial_run.md  04_relation_counts_and_samples.md  05_relation_source_span_audit.md  05_stable_symbol_identity.md  06_manifest_hashing_stale_updates.md  06_stable_symbol_identity_fix.md  07_import_alias_call_resolution_fix.md  07_source_span_proof_gate.md  08_edge_classification_fix.md  08_graph_truth_schema.md  09_graph_truth_gate.md  09_source_span_exactness_fix.md  10_stage_ablation.md  10_stale_fact_update_fix.md  11_auth_sanitizer_test_relation_fix.md  11_test_mock_leakage_fix.md  12_edge_classification_fix.md  12_semantic_correctness_gate.json  12_semantic_correctness_gate.md  13_incremental_concurrent_indexer_design.md  13_stale_update_fix.md  14_call_resolution_fix.md  14_local_fact_bundle_reducer_skeleton.md  15_parallel_indexer_implementation.md  15_source_span_precision_fix.md  16_auth_security_extraction_fix.md  16_manifest_incremental_index_fix.md  17_indexing_performance_gate.json  17_indexing_performance_gate.md  17_unresolved_calls_latency_fix.md  18_storage_experiments.md  18_storage_index_forensics.md  19_compact_storage_fix.md  19_storage_experiments.md  (+103 more)
reports/baselines/: BASELINE_LATEST.json  BASELINE_LATEST.md  compact_proof_baseline_latest.json  compact_proof_baseline_latest.md
reports/comparison/: codegraph_vs_cgc_20260510_231314.json  codegraph_vs_cgc_20260510_231314.md  codegraph_vs_cgc_latest.json  codegraph_vs_cgc_latest.md  per_task.jsonl  run.json  summary.md
reports/final/: INTENDED_PERFORMANCE_GATE.json  INTENDED_PERFORMANCE_GATE.md  compact_proof_db_gate.json  compact_proof_db_gate.md  comprehensive_benchmark_1778602845642.json  comprehensive_benchmark_1778602845642.md  comprehensive_benchmark_1778605930317.json  comprehensive_benchmark_1778605930317.md  comprehensive_benchmark_1778606005070.json  comprehensive_benchmark_1778606005070.md  comprehensive_benchmark_1778606338342.json  comprehensive_benchmark_1778642765060.json  comprehensive_benchmark_1778642765060.md  comprehensive_benchmark_20260512_110207.json  comprehensive_benchmark_20260512_110207.md  comprehensive_benchmark_cgc_recovery_20260513.md  comprehensive_benchmark_cold_proof_build_optimization.json  comprehensive_benchmark_current_post_cold_build_fastpath.json  comprehensive_benchmark_intended_tool_quality_gate.json  comprehensive_benchmark_intended_tool_quality_gate.md  comprehensive_benchmark_latest.json  comprehensive_benchmark_manual_relation_precision.json  comprehensive_benchmark_manual_relation_precision.md  comprehensive_benchmark_minimal_storage_package_apply.json  comprehensive_benchmark_minimal_storage_package_apply.md  comprehensive_benchmark_proof_build_fix_20260513.json  comprehensive_benchmark_proof_build_fix_20260513.md  comprehensive_benchmark_symbol_qname_compaction.json  comprehensive_benchmark_template_compaction.json  comprehensive_benchmark_template_dictionary_index.json  intended_tool_quality_gate.json  intended_tool_quality_gate.md  manual_relation_precision.md  pr_baseline_status.json  pr_baseline_status.md  pr_readiness_gate.json  pr_readiness_gate.md  readme_agent_benchmark_visuals.json  readme_agent_benchmark_visuals.md
scripts/: check_markdown_links.py  check_readme_artifacts.py  codegraph-profile.ps1  generate_readme_agent_benchmark_visuals.py  replay-real-repo-corpus.ps1  replay-real-repo-corpus.sh  smoke_docker.sh  smoke_fresh_clone.ps1  smoke_fresh_clone.sh  smoke_index.ps1  smoke_index.sh
templates/: AGENTS.md
templates/hooks/: PostToolUse.md  PreToolUse.md  SessionStart.md  Stop.md  UserPromptSubmit.md  codegraph-hooks.json
(+663 files in other folders)
