[package]
name = "codegraph-bench"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
sqlite = []
rocksdb = []
qdrant = []
faiss = []
ui = []
mcp = []

[lints]
workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-index = { path = "../codegraph-index" }
codegraph-mcp-server = { path = "../codegraph-mcp-server" }
codegraph-parser = { path = "../codegraph-parser" }
codegraph-query = { path = "../codegraph-query" }
codegraph-store = { path = "../codegraph-store" }
codegraph-vector = { path = "../codegraph-vector" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
