[package]
name = "codegraph-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "codegraph-mcp"
path = "src/main.rs"

[features]
default = []
sqlite = []
rocksdb = []
qdrant = []
faiss = []
ui = []
mcp = []

[lints]
workspace = true

[dependencies]
codegraph-bench = { path = "../codegraph-bench" }
codegraph-core = { path = "../codegraph-core" }
codegraph-index = { path = "../codegraph-index" }
codegraph-mcp-server = { path = "../codegraph-mcp-server" }
codegraph-parser = { path = "../codegraph-parser" }
codegraph-query = { path = "../codegraph-query" }
codegraph-store = { path = "../codegraph-store" }
codegraph-trace = { path = "../codegraph-trace" }
codegraph-vector = { path = "../codegraph-vector" }
notify = "8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
