[package]
name = "codegraph-index"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codegraph-core = { path = "../codegraph-core" }
codegraph-parser = { path = "../codegraph-parser" }
codegraph-query = { path = "../codegraph-query" }
codegraph-store = { path = "../codegraph-store" }
codegraph-vector = { path = "../codegraph-vector" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
