[package]
name = "codegraph-mcp-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
sqlite = []
rocksdb = []
qdrant = []
faiss = []
ui = []
mcp = []

[dependencies]
codegraph-core = { version = "0.0.0", path = "../codegraph-core" }
codegraph-index = { version = "0.0.0", path = "../codegraph-index" }
codegraph-parser = { version = "0.0.0", path = "../codegraph-parser" }
codegraph-query = { version = "0.0.0", path = "../codegraph-query" }
codegraph-store = { version = "0.0.0", path = "../codegraph-store" }
codegraph-trace = { version = "0.0.0", path = "../codegraph-trace" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
