[package]
name = "codegraph-parser"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
sqlite = []
rocksdb = []
qdrant = []
faiss = []
ui = []
mcp = []

[lints]
workspace = true

[dependencies]
codegraph-core = { version = "0.0.0", path = "../codegraph-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26.8"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
codegraph-store = { path = "../codegraph-store" }
